# grasp_refinement

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  docker-compose.yml  requirements.txt  singularity.recipe
agent/: CMakeLists.txt  package.xml
agent/src/: args.py  env.py  main.py  train.py  train.sh  vis.py
brain/: CMakeLists.txt  package.xml
brain/experiments/: vis.py
brain/include/: baseline_controller.hpp  helpers.hpp
brain/src/: baseline_controller.cpp  helpers.cpp  main.cpp
cluster/: experiment.slurm  experiments.sh  gazebo_ros.recipe  run_agent.sh  run_sim.sh
command/brain/: CMakeLists.txt  package.xml  (+1 more)
control/: CMakeLists.txt  package.xml
control_module/: CMakeLists.txt  package.xml
description/: .gitignore  README.md
sensors/: CMakeLists.txt
simulation/description/: CMakeLists.txt  package.xml
simulation/description/launch/: object.launch  reflex.launch
simulation/description/robots/: object.xacro  reflex.robot.xacro
simulation/description/urdf/end_effectors/: push_stick.urdf.xacro  rigid_obj.urdf.xacro
simulation/description/urdf/environment/: box.urdf.xacro  cylinder.urdf.xacro  object_table.urdf.xacro  sphere.urdf.xacro
simulation/description/urdf/force_sensors/: ati_sensor.urdf.xacro
simulation/description/urdf/lbr4/: lbr4_base.urdf.xacro  lbr4_calibration.urdf
simulation/description/urdf/mounts/: lbr4_mount.urdf.xacro  optoforce_push_stick_mount.urdf.xacro
simulation/description/urdf/reflex/: reflex.gazebo.xacro  reflex.transmission.xacro  reflex.urdf.xacro
simulation/description/worlds/: reflex.world
(+218 files in other folders)
