<?xml version="1.0"?>
<package>
  <name>description</name>
  <version>0.0.0</version>
  <description>The description package</description>
  <maintainer email="bala@todo.todo">bala</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export> </export>

</package>
